<!-- Contains strings related to the application -->
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="PrivateResource">Coinz</string>
    <string name="logo">logo</string>
    <string name="title_activity_login_controller">Sign in</string>
    <string name="title_activity_registration_controller">Register</string>


    <!-- Strings related to login -->
    <string name="prompt_name">Name</string>
    <string name="prompt_email">Email</string>
...
